--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_swipe_tutorial
-description: A new Flutter package project.
+description: A customizable and easy-to-use Flutter package for creating swipe-based tutorials.
 version: 0.0.1
-homepage:
+homepage: https://github.com/jillellamudisurya/flutter_swipe_tutorial
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
